--- a/packages/front/modules/history/EmptyList/styles.module.css
+++ b/packages/front/modules/history/EmptyList/styles.module.css
@@ -1,3 +1,18 @@
 .container {
-  text-align: center;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  padding: 3rem 1.5rem;
+  margin: 0;
+  gap: 1rem;
+}
+
+.label {
+  color: var(--color-gray-600);
+  font-size: 1rem;
+}
+
+.topIconWrap, .topIconWrap svg {
+  color: var(--color-gray-300);
+  font-size: 3rem;
 }
