--- a/packages/front/modules/musics/file-info/Edit/List.module.css
+++ b/packages/front/modules/musics/file-info/Edit/List.module.css
@@ -1,10 +1,9 @@
-.header{
-  display: flex;
-  justify-content: end;
-}
-
 .item {
   display: flex;
   justify-content: end;
   margin-bottom: 0.5rem;
+}
+
+.container {
+  margin: 1rem 0;
 }
