--- a/packages/front/modules/ui-kit/form/Footer/Buttons/styles.module.css
+++ b/packages/front/modules/ui-kit/form/Footer/Buttons/styles.module.css
@@ -2,6 +2,8 @@
   padding-top: 1rem;
   display: flex;
   flex-flow: row nowrap;
+  gap: 1rem;
+  align-items: center;
 
   &:not(:has(>aside)) {
     justify-content: right;
@@ -19,5 +21,6 @@
 
   > aside {
     justify-content: center;
+    align-items: center;
   }
 }
