--- a/packages/front/modules/ui-kit/modal/Modal.module.css
+++ b/packages/front/modules/ui-kit/modal/Modal.module.css
@@ -51,6 +51,10 @@
   .title {
     font-size: 1.25em;
     font-weight: bold;
+
+    @media (width < 500px) {
+      font-size: 1em;
+    }
   }
 
   .closeButton {
