fix(front): scroll and keyboard on modal and contextmenu, and minor css style fixes

--- a/packages/front/modules/ui-kit/form/input/Button/styles.module.css
+++ b/packages/front/modules/ui-kit/form/input/Button/styles.module.css
@@ -36,6 +36,10 @@ body:has(.button) {
   align-items: center;
   justify-content: center;
 
+  &:focus-visible {
+   box-shadow: 0 0 0 3px var(--color-ui-focus);
+  }
+
   &:disabled {
     background-color: var(--button-disabled-background-color);
     color: var(--button-disabled-color);
