--- a/packages/front/modules/image-covers/Selector/Button.module.css
+++ b/packages/front/modules/image-covers/Selector/Button.module.css
@@ -8,9 +8,20 @@
   font-size: 0.8em;
   margin-top: 0.5rem;
   flex: 1;
+  width: 100%;
+
+  /* Elimina el fondo y el borde */
+  background: none;
+  border: none;
+  padding: 0;
+  color: inherit;
 
   &:hover {
     cursor: pointer;
     filter: brightness(0.5);
+  }
+
+   &:focus-visible {
+    box-shadow: 0 0 0 2px var(--color-ui-focus);
   }
 }
