--- a/packages/front/modules/musics/lists/playlists/FullPage/Header.module.css
+++ b/packages/front/modules/musics/lists/playlists/FullPage/Header.module.css
@@ -62,7 +62,7 @@
     align-items: center;
     justify-content: left;
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     gap: 0.5rem;
   }
 }
