--- a/packages/front/modules/ui-kit/form/EnumButtons/styles.module.css
+++ b/packages/front/modules/ui-kit/form/EnumButtons/styles.module.css
@@ -11,9 +11,8 @@
 
 .active {
   opacity: 1;
-  outline: 3px solid var(--color-blue-600);
 }
 
 .inactive {
-  opacity: 0.4;
+  --button-background-color: var(--color-gray-600);
 }
