--- a/packages/front/modules/ui-kit/form/input/Text/styles.module.css
+++ b/packages/front/modules/ui-kit/form/input/Text/styles.module.css
@@ -1,3 +1,9 @@
 .null:not(:focus) {
   background-color: var(--color-gray-500);
 }
+
+.input {
+   &:focus-visible {
+    box-shadow: 0 0 0 2px var(--color-ui-focus);
+  }
+}
