--- a/packages/front/modules/ui-kit/modal/Modal.module.css
+++ b/packages/front/modules/ui-kit/modal/Modal.module.css
@@ -42,21 +42,16 @@
   flex-flow: row nowrap;
   justify-content: space-between;
   align-items: center;
-  margin-top: 12px;
-  margin-bottom: 1rem;
-  padding-bottom: 0.5rem;
-  line-height: 24px;
+  line-height: 1.5rem;
   border-bottom: 1px solid var(--color-separator);
   color: var(--color-gray-100);
   width: 100%;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 
   .title {
     font-size: 1.25em;
     font-weight: bold;
-
-    @media (width < 500px) {
-      font-size: 1em;
-    }
   }
 
   .closeButton {
@@ -72,6 +67,15 @@
       color: var(--color-gray-300);
     }
   }
+
+  @media (width < 500px) {
+    padding-top: 0;
+    padding-bottom: 0;
+
+    .title {
+      font-size: 1em;
+    }
+  }
 }
 
 .modal > .content {
@@ -79,9 +83,11 @@
   flex-flow: column nowrap;
   flex: 1;
   overflow: auto;
-  padding-bottom: 24px;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .modal > header, .content {
-  padding: 0 24px;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
